2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.16.0 ===

2008-03-10  Matthias Clasen <mclasen@redhat.com>

	* gio.symbols: Remove g_file_contains_file here, too.

2008-03-10  Matthias Clasen <mclasen@redhat.com>

	* gthemedicon.c: Add properties to make bindings happy.  (#517676,
	Samuel Cormier-Iijima)

2008-03-08  Tor Lillqvist  <tml@novell.com>

	* glocalfile.c: Define FILE_READ_ONLY_VOLUME if it is missing from
	winnt.h. (#521145)

2008-03-07  Alexander Larsson  <alexl@redhat.com>

        * glocalfile.c:
        (g_local_file_query_filesystem_info):
	Use struct statfs.f_fstypename if availible (e.g. on OpenBSD)
	Patch from Jasper Lievisse Adriaanse

2008-03-06  Tor Lillqvist  <tml@novell.com>

	* gfileinfo.h: Correct milliseconds to microseconds in the doc
	comments for the *_USEC attributes.

2008-03-06  Alexander Larsson  <alexl@redhat.com>

	* gfile.c (g_file_query_exists):
	Add g_return_val_if_fail check (#520700)

2008-03-06  Alexander Larsson  <alexl@redhat.com>

        * gdesktopappinfo.c:
        * gfilemonitor.c:
        * gthemedicon.c:
        * gunionvolumemonitor.c:
        * gunixmounts.c:
        * tests/g-file.c:
        * tests/live-g-file.c:
        * xdgmime/xdgmimecache.c:
	Fix sparse warnings (#519489)

2008-03-05  Alexander Larsson  <alexl@redhat.com>

        * gfilemonitor.c:
	Make cancellation threadsafe (i.e.
	guarantee its only done once, and always
	done)
	
        * glocaldirectorymonitor.c:
	Make sure we the monitor lives while the
	mounts_changed callback is being called (#520484)

2008-03-04  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gbufferedinputstream.c: Fix typo in parameter
	documentation.

2008-03-04  Alexander Larsson  <alexl@redhat.com>

        * gfile.c:
	Remove deprecated symbols we kept for one release.

2008-03-04  Murray Cumming  <murrayc@murrayc.com>

	* ginputstream.c:
	* goutputstream.c: Tiny documentation corrections.

2008-03-03  Alexander Larsson  <alexl@redhat.com>
